--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: /android
+        working-directory: ${{ github.workspace }}/android
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v2
